infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: samar-minime
  labels:
    name: samar-minime
